--- a/vue-profile/package.json
+++ b/vue-profile/package.json
@@ -21,6 +21,7 @@
     "element-plus": "^2.3.9",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
+    "vue-owl-carousel": "^2.0.3",
     "vue-router": "^4.2.4",
     "vue-sweetalert2": "^5.0.5"
   },
