HeaderTop開合顯示調整、新增router home、Skills套用swiper套件

--- a/vue-profile/package.json
+++ b/vue-profile/package.json
@@ -20,6 +20,7 @@
     "bootstrap-vue": "^2.23.1",
     "element-plus": "^2.3.9",
     "pinia": "^2.1.6",
+    "swiper": "^10.2.0",
     "vue": "^3.3.4",
     "vue-owl-carousel": "^2.0.3",
     "vue-router": "^4.2.4",
