--- a/vue-profile/package.json
+++ b/vue-profile/package.json
@@ -22,6 +22,7 @@
     "pinia": "^2.1.6",
     "swiper": "^10.2.0",
     "vue": "^3.3.4",
+    "vue-amazing-ui": "^0.1.16",
     "vue-owl-carousel": "^2.0.3",
     "vue-router": "^4.2.4",
     "vue-sweetalert2": "^5.0.5"
