--- a/vue-profile/package.json
+++ b/vue-profile/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy":"gh-pages -d dist"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
@@ -19,6 +20,7 @@
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.23.1",
     "element-plus": "^2.3.9",
+    "gh-pages": "^6.1.0",
     "pinia": "^2.1.6",
     "swiper": "^10.2.0",
     "vue": "^3.3.4",
